real-cks/2/q5/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-ivy-private
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-ivy-gateway
